Edit packets asynchronous via a netty channel duplex handler.