@@ -3,8 +3,11 @@ package de.robingrether.idisguise.management;
 import java.lang.reflect.Array;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
+import java.util.Map;
 import java.util.UUID;
 import java.util.logging.Level;
 
@@ -12,8 +15,6 @@ import org.bukkit.Bukkit;
 import org.bukkit.Color;
 import org.bukkit.Location;
 import org.bukkit.Material;
-import org.bukkit.OfflinePlayer;
-import org.bukkit.entity.EnderDragon;
 import org.bukkit.entity.LivingEntity;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.ItemStack;
@@ -21,11 +22,12 @@ import org.bukkit.inventory.ItemStack;
 import de.robingrether.idisguise.iDisguise;
 import de.robingrether.idisguise.api.PlayerInteractDisguisedPlayerEvent;
 import de.robingrether.idisguise.disguise.*;
-import de.robingrether.idisguise.management.channel.InjectedPlayerConnection;
+import de.robingrether.idisguise.management.channel.Unaltered;
 import de.robingrether.idisguise.management.util.EntityIdList;
 
 import static de.robingrether.idisguise.management.Reflection.*;
 import de.robingrether.util.ObjectUtil;
+import io.netty.channel.Channel;
 
 public final class PacketHandler {
 	
@@ -39,12 +41,13 @@ public final class PacketHandler {
 	
 	public static boolean bungeeCord;
 	
-	public static Object[] getSpawnPackets(LivingEntity livingEntity) {
+	private static Object[] getSpawnPackets(UUID disguisable, String customName, int entityId, double posX, double posY, double posZ, float rotYaw, float rotPitch, Player observer) { // TODO: custom name
 		try {
-			Disguise disguise = DisguiseManager.getDisguise(livingEntity);
+			Disguise disguise = DisguiseManager.getDisguise(disguisable);
 			if(disguise == null) return null;
 			
-			Object entityLiving = CraftLivingEntity_getHandle.invoke(livingEntity);
+			Object world = Entity_world.get(CraftPlayer_getHandle.invoke(observer));
+			
 			DisguiseType type = disguise.getType();
 			List<Object> packets = new ArrayList<Object>();
 			
@@ -52,9 +55,9 @@ public final class PacketHandler {
 				MobDisguise mobDisguise = (MobDisguise)disguise;
 				Object entity = null;
 				if(VersionHelper.require1_11()) {
-					entity = Class.forName(VersionHelper.getNMSPackage() + "." + type.getNMSClass()).getConstructor(World).newInstance(Entity_world.get(entityLiving));
+					entity = Class.forName(VersionHelper.getNMSPackage() + "." + type.getNMSClass()).getConstructor(World).newInstance(world);
 				} else {
-					entity = Class.forName(VersionHelper.getNMSPackage() + "." + type.getNMSClass().replaceAll("(Guardian|Horse|Skeleton|Zombie)(Elder|Donkey|Mule|Skeleton|Zombie|Wither|Stray|Villager|Husk)", "$1")).getConstructor(World).newInstance(Entity_world.get(entityLiving));
+					entity = Class.forName(VersionHelper.getNMSPackage() + "." + type.getNMSClass().replaceAll("(Guardian|Horse|Skeleton|Zombie)(Elder|Donkey|Mule|Skeleton|Zombie|Wither|Stray|Villager|Husk)", "$1")).getConstructor(World).newInstance(world);
 					switch(type) {
 						case ELDER_GUARDIAN:
 							EntityGuardian_setElder.invoke(entity, true);
@@ -96,7 +99,7 @@ public final class PacketHandler {
 				}
 				
 				if(showOriginalPlayerName) {
-					Entity_setCustomName.invoke(entity, VersionHelper.require1_13() ? Array.get(CraftChatMessage_fromString.invoke(null, livingEntity.getName()), 0) : livingEntity.getName());
+					Entity_setCustomName.invoke(entity, VersionHelper.require1_13() ? Array.get(CraftChatMessage_fromString.invoke(null, customName), 0) : customName);
 					Entity_setCustomNameVisible.invoke(entity, true);
 				} else if(mobDisguise.getCustomName() != null && !mobDisguise.getCustomName().isEmpty()) {
 					Entity_setCustomName.invoke(entity, VersionHelper.require1_13() ? Array.get(CraftChatMessage_fromString.invoke(null, mobDisguise.getCustomName()), 0) : mobDisguise.getCustomName());
@@ -198,20 +201,24 @@ public final class PacketHandler {
 					EntityBat_setAsleep.invoke(entity, false);
 				}
 				
-				Location location = livingEntity.getLocation();
-				Entity_setLocation.invoke(entity, location.getX(), location.getY(), location.getZ(), location.getYaw(), location.getPitch());
-				Entity_setEntityId.invoke(entity, livingEntity.getEntityId());
+				Entity_setLocation.invoke(entity, posX, posY, posZ, rotYaw, rotPitch);
+				Entity_setEntityId.invoke(entity, entityId);
 				packets.add(PacketPlayOutSpawnEntityLiving_new.newInstance(entity));
 			} else if(disguise instanceof PlayerDisguise) {
-				if(livingEntity instanceof Player) {
-					Object spawnPacket = PacketPlayOutNamedEntitySpawn_new.newInstance(entityLiving);
-					PacketPlayOutNamedEntitySpawn_profileId.set(spawnPacket, formatUniqueId((UUID)PacketPlayOutNamedEntitySpawn_profileId.get(spawnPacket)));
+				PlayerDisguise playerDisguise = (PlayerDisguise)disguise;
+				
+				if(EntityIdList.isPlayer(disguisable)) {
+					Object gameProfile = ProfileHelper.getInstance().getGameProfile(disguisable, playerDisguise.getSkinName(), playerDisguise.getDisplayName());
 					
-					// don't modify anything else here, skin is applied via player list item packet
+					Object entity = EntityHumanNonAbstract_new.newInstance(world, gameProfile);
+					Entity_setLocation.invoke(entity, posX, posY, posZ, rotYaw, rotPitch);
+					Entity_setEntityId.invoke(entity, entityId);
+					
+					Object spawnPacket = PacketPlayOutNamedEntitySpawn_new.newInstance(entity);
+					
 					packets.add(spawnPacket);
 				} else {
-					PlayerDisguise playerDisguise = (PlayerDisguise)disguise;
-					Object gameProfile = ProfileHelper.getInstance().getGameProfile(livingEntity.getUniqueId(), playerDisguise.getSkinName(), playerDisguise.getDisplayName());
+					Object gameProfile = ProfileHelper.getInstance().getGameProfile(disguisable, playerDisguise.getSkinName(), playerDisguise.getDisplayName());
 					
 					// send game profile to client
 					Object playerInfoPacket = PacketPlayOutPlayerInfo_new.newInstance();
@@ -221,10 +228,9 @@ public final class PacketHandler {
 					packets.add(playerInfoPacket);
 					
 					// send entity to client
-					Object entity = EntityHumanNonAbstract_new.newInstance(Entity_world.get(entityLiving), gameProfile);
-					Location location = livingEntity.getLocation();
-					Entity_setLocation.invoke(entity, location.getX(), location.getY(), location.getZ(), location.getYaw(), location.getPitch());
-					Entity_setEntityId.invoke(entity, livingEntity.getEntityId());
+					Object entity = EntityHumanNonAbstract_new.newInstance(world, gameProfile);
+					Entity_setLocation.invoke(entity, posX, posY, posZ, rotYaw, rotPitch);
+					Entity_setEntityId.invoke(entity, entityId);
 					packets.add(PacketPlayOutNamedEntitySpawn_new.newInstance(entity));
 					
 					if(!modifyPlayerListEntry) {
@@ -238,12 +244,12 @@ public final class PacketHandler {
 				}
 			} else if(disguise instanceof ObjectDisguise) {
 				ObjectDisguise objectDisguise = (ObjectDisguise)disguise;
-				Object entity = Class.forName(VersionHelper.getNMSPackage() + "." + type.getNMSClass()).getConstructor(World).newInstance(Entity_world.get(entityLiving));
-				Location location = livingEntity.getLocation();
-				Entity_setLocation.invoke(entity, location.getX(), location.getY(), location.getZ(), location.getYaw(), location.getPitch());
-				Entity_setEntityId.invoke(entity, livingEntity.getEntityId());
+				Object entity = Class.forName(VersionHelper.getNMSPackage() + "." + type.getNMSClass()).getConstructor(World).newInstance(world);
+				
+				Entity_setLocation.invoke(entity, posX, posY, posZ, rotYaw, rotPitch);
+				Entity_setEntityId.invoke(entity, entityId);
 				if(showOriginalPlayerName) {
-					Entity_setCustomName.invoke(entity, VersionHelper.require1_13() ? Array.get(CraftChatMessage_fromString.invoke(null, livingEntity.getName()), 0) : livingEntity.getName());
+					Entity_setCustomName.invoke(entity, VersionHelper.require1_13() ? Array.get(CraftChatMessage_fromString.invoke(null, customName), 0) : customName);
 					Entity_setCustomNameVisible.invoke(entity, true);
 				} else if(objectDisguise.getCustomName() != null && !objectDisguise.getCustomName().isEmpty()) {
 					Entity_setCustomName.invoke(entity, VersionHelper.require1_13() ? Array.get(CraftChatMessage_fromString.invoke(null, objectDisguise.getCustomName()), 0) : objectDisguise.getCustomName());
@@ -254,7 +260,7 @@ public final class PacketHandler {
 						EntityBoat_setType.invoke(entity, EnumBoatType_fromString.invoke(null, ((BoatDisguise)objectDisguise).getBoatType().name().toLowerCase(Locale.ENGLISH)));
 					}
 					packets.add(PacketPlayOutSpawnEntity_new.newInstance(entity, objectDisguise.getTypeId(), 0));
-					packets.add(PacketPlayOutEntityMetadata_new_full.newInstance(livingEntity.getEntityId(), Entity_getDataWatcher.invoke(entity), true));
+					packets.add(PacketPlayOutEntityMetadata_new_full.newInstance(entityId, Entity_getDataWatcher.invoke(entity), true));
 				} else if(EntityFallingBlock.isInstance(entity)) {
 					int typeId = 1;
 					if(objectDisguise instanceof FallingBlockDisguise) {
@@ -272,7 +278,7 @@ public final class PacketHandler {
 						EntityItem_setItemStack.invoke(entity, CraftItemStack_asNMSCopy.invoke(null, itemDisguise.getItemStack()));
 					}
 					packets.add(PacketPlayOutSpawnEntity_new.newInstance(entity, objectDisguise.getTypeId(), 1));
-					packets.add(PacketPlayOutEntityMetadata_new_full.newInstance(livingEntity.getEntityId(), Entity_getDataWatcher.invoke(entity), true));
+					packets.add(PacketPlayOutEntityMetadata_new_full.newInstance(entityId, Entity_getDataWatcher.invoke(entity), true));
 				} else if(EntityMinecartAbstract.isInstance(entity)) {
 					if(objectDisguise instanceof MinecartDisguise) {
 						MinecartDisguise minecartDisguise = (MinecartDisguise)objectDisguise;
@@ -283,13 +289,13 @@ public final class PacketHandler {
 						}
 					}
 					packets.add(PacketPlayOutSpawnEntity_new.newInstance(entity, objectDisguise.getTypeId(), 0));
-					packets.add(PacketPlayOutEntityMetadata_new_full.newInstance(livingEntity.getEntityId(), Entity_getDataWatcher.invoke(entity), true));
+					packets.add(PacketPlayOutEntityMetadata_new_full.newInstance(entityId, Entity_getDataWatcher.invoke(entity), true));
 				} else if(EntityArmorStand.isInstance(entity)) {
 					if(objectDisguise instanceof ArmorStandDisguise) {
 						EntityArmorStand_setArms.invoke(entity, ((ArmorStandDisguise)objectDisguise).getShowArms());
 					}
 					packets.add(PacketPlayOutSpawnEntity_new.newInstance(entity, objectDisguise.getTypeId(), 0));
-					packets.add(PacketPlayOutEntityMetadata_new_full.newInstance(livingEntity.getEntityId(), Entity_getDataWatcher.invoke(entity), true));
+					packets.add(PacketPlayOutEntityMetadata_new_full.newInstance(entityId, Entity_getDataWatcher.invoke(entity), true));
 				} else if(EntityAreaEffectCloud.isInstance(entity)) {
 					if(objectDisguise instanceof AreaEffectCloudDisguise) {
 						AreaEffectCloudDisguise aecDisguise = (AreaEffectCloudDisguise)objectDisguise;
@@ -310,7 +316,7 @@ public final class PacketHandler {
 						}
 					}
 					packets.add(PacketPlayOutSpawnEntity_new.newInstance(entity, objectDisguise.getTypeId(), 0));
-					packets.add(PacketPlayOutEntityMetadata_new_full.newInstance(livingEntity.getEntityId(), Entity_getDataWatcher.invoke(entity), true));
+					packets.add(PacketPlayOutEntityMetadata_new_full.newInstance(entityId, Entity_getDataWatcher.invoke(entity), true));
 				} else {
 					packets.add(PacketPlayOutSpawnEntity_new.newInstance(entity, objectDisguise.getTypeId(), 0));
 				}
@@ -324,28 +330,31 @@ public final class PacketHandler {
 		return new Object[0];
 	}
 	
-	public static Object getPlayerInfo(OfflinePlayer offlinePlayer, Player observer, Object context, int ping, Object gamemode, Object displayName) {
-		if(offlinePlayer == observer) {
-			return getPlayerInfoSelf(offlinePlayer, context, ping, gamemode, displayName);
+	private static Object getPlayerInfo(UUID disguisable, Player observer, Object context, Object originalPlayerInfo) {
+		if(observer.getUniqueId().equals(disguisable)) {
+			return getPlayerInfoSelf(disguisable, context, originalPlayerInfo);
 		}
-		Disguise disguise = DisguiseManager.getDisguise(offlinePlayer);
+		Disguise disguise = DisguiseManager.getDisguise(disguisable);
 		try {
 			if(disguise == null) {
-				return PlayerInfoData_new.newInstance(context, offlinePlayer.isOnline() ? CraftPlayer_getProfile.invoke(offlinePlayer) : CraftOfflinePlayer_getProfile.invoke(offlinePlayer), ping, gamemode, displayName);
+				return originalPlayerInfo; // PlayerInfoData_new.newInstance(context, offlinePlayer.isOnline() ? CraftPlayer_getProfile.invoke(offlinePlayer) : CraftOfflinePlayer_getProfile.invoke(offlinePlayer), ping, gamemode, displayName);
 			} else if(disguise instanceof PlayerDisguise) {
 				if(modifyPlayerListEntry) {
+					Object displayName = PlayerInfoData_getDisplayName.invoke(originalPlayerInfo);
 					return PlayerInfoData_new.newInstance(context,
-							ProfileHelper.getInstance().getGameProfile(formatUniqueId(offlinePlayer.getUniqueId()), ((PlayerDisguise)disguise).getSkinName(), ((PlayerDisguise)disguise).getDisplayName()),
-							ping, gamemode, displayName != null ?
-									Array.get(CraftChatMessage_fromString.invoke(null, ((String)CraftChatMessage_fromComponent.invoke(null, displayName, EnumChatFormat_WHITE.get(null))).replace(offlinePlayer.getName(), ((PlayerDisguise)disguise).getDisplayName())), 0) :
-									null);
+							ProfileHelper.getInstance().getGameProfile(formatUniqueId(disguisable), ((PlayerDisguise)disguise).getSkinName(), ((PlayerDisguise)disguise).getDisplayName()),
+							PlayerInfoData_getPing.invoke(originalPlayerInfo), PlayerInfoData_getGamemode.invoke(originalPlayerInfo), displayName != null ?
+								Array.get(CraftChatMessage_fromString.invoke(null, ((String)CraftChatMessage_fromComponent.invoke(null, displayName, EnumChatFormat_WHITE.get(null))).replace(EntityIdList.getPlayerName(disguisable), ((PlayerDisguise)disguise).getDisplayName())), 0) :
+								null);
 				} else {
+					Object displayName = PlayerInfoData_getDisplayName.invoke(originalPlayerInfo);
 					return PlayerInfoData_new.newInstance(context,
-							ProfileHelper.getInstance().getGameProfile(formatUniqueId(offlinePlayer.getUniqueId()), ((PlayerDisguise)disguise).getSkinName(), ((PlayerDisguise)disguise).getDisplayName()),
-							ping, gamemode, displayName != null ? displayName : Array.get(CraftChatMessage_fromString.invoke(null, offlinePlayer.isOnline() ? offlinePlayer.getPlayer().getPlayerListName() : offlinePlayer.getName()), 0));
+							ProfileHelper.getInstance().getGameProfile(formatUniqueId(disguisable), ((PlayerDisguise)disguise).getSkinName(), ((PlayerDisguise)disguise).getDisplayName()),
+							PlayerInfoData_getPing.invoke(originalPlayerInfo), PlayerInfoData_getGamemode.invoke(originalPlayerInfo), displayName != null ? displayName :
+								Array.get(CraftChatMessage_fromString.invoke(null, EntityIdList.getPlayerName(disguisable)), 0));
 				}
 			} else if(!modifyPlayerListEntry) {
-				return PlayerInfoData_new.newInstance(context, offlinePlayer.isOnline() ? CraftPlayer_getProfile.invoke(offlinePlayer) : CraftOfflinePlayer_getProfile.invoke(offlinePlayer), ping, gamemode, displayName);
+				return originalPlayerInfo; // PlayerInfoData_new.newInstance(context, offlinePlayer.isOnline() ? CraftPlayer_getProfile.invoke(offlinePlayer) : CraftOfflinePlayer_getProfile.invoke(offlinePlayer), ping, gamemode, displayName);
 			}
 		} catch(Exception e) {
 			if(VersionHelper.debug()) {
@@ -355,23 +364,25 @@ public final class PacketHandler {
 		return null;
 	}
 	
-	public static Object getPlayerInfoSelf(OfflinePlayer offlinePlayer, Object context, int ping, Object gamemode, Object displayName) {
-		Disguise disguise = DisguiseManager.getDisguise(offlinePlayer);
+	private static Object getPlayerInfoSelf(UUID disguisable, Object context, Object originalPlayerInfo) {
+		Disguise disguise = DisguiseManager.getDisguise(disguisable);
 		try {
 			if(disguise == null) {
-				return PlayerInfoData_new.newInstance(context, offlinePlayer.isOnline() ? CraftPlayer_getProfile.invoke(offlinePlayer) : CraftOfflinePlayer_getProfile.invoke(offlinePlayer), ping, gamemode, displayName);
+				return originalPlayerInfo; // PlayerInfoData_new.newInstance(context, offlinePlayer.isOnline() ? CraftPlayer_getProfile.invoke(offlinePlayer) : CraftOfflinePlayer_getProfile.invoke(offlinePlayer), ping, gamemode, displayName);
 			} else if(disguise instanceof PlayerDisguise) {
+				Object displayName = PlayerInfoData_getDisplayName.invoke(originalPlayerInfo);
 				return PlayerInfoData_new.newInstance(context,
-						ProfileHelper.getInstance().getGameProfile(offlinePlayer.getUniqueId(), ((PlayerDisguise)disguise).getSkinName(), ((PlayerDisguise)disguise).getDisplayName()),
-						ping, gamemode, displayName != null ? displayName : Array.get(CraftChatMessage_fromString.invoke(null, offlinePlayer.isOnline() ? offlinePlayer.getPlayer().getPlayerListName() : offlinePlayer.getName()), 0));
+						ProfileHelper.getInstance().getGameProfile(disguisable, ((PlayerDisguise)disguise).getSkinName(), ((PlayerDisguise)disguise).getDisplayName()),
+						PlayerInfoData_getPing.invoke(originalPlayerInfo), PlayerInfoData_getGamemode.invoke(originalPlayerInfo), displayName != null ? displayName : Array.get(CraftChatMessage_fromString.invoke(null, EntityIdList.getPlayerName(disguisable)), 0));
 			} else {
 				String mhfSkin = disguise.getType().getMHFSkin();
 				if(mhfSkin != null) {
+					Object displayName = PlayerInfoData_getDisplayName.invoke(originalPlayerInfo);
 					return PlayerInfoData_new.newInstance(context,
-							ProfileHelper.getInstance().getGameProfile(offlinePlayer.getUniqueId(), mhfSkin, offlinePlayer.getName()),
-							ping, gamemode, displayName != null ? displayName : Array.get(CraftChatMessage_fromString.invoke(null, offlinePlayer.isOnline() ? offlinePlayer.getPlayer().getPlayerListName() : offlinePlayer.getName()), 0));
+							ProfileHelper.getInstance().getGameProfile(disguisable, mhfSkin, EntityIdList.getPlayerName(disguisable)),
+							PlayerInfoData_getPing.invoke(originalPlayerInfo), PlayerInfoData_getGamemode.invoke(originalPlayerInfo), displayName != null ? displayName : Array.get(CraftChatMessage_fromString.invoke(null, EntityIdList.getPlayerName(disguisable)), 0));
 				} else {
-					return PlayerInfoData_new.newInstance(context, offlinePlayer.isOnline() ? CraftPlayer_getProfile.invoke(offlinePlayer) : CraftOfflinePlayer_getProfile.invoke(offlinePlayer), ping, gamemode, displayName);
+					return originalPlayerInfo; // PlayerInfoData_new.newInstance(context, offlinePlayer.isOnline() ? CraftPlayer_getProfile.invoke(offlinePlayer) : CraftOfflinePlayer_getProfile.invoke(offlinePlayer), ping, gamemode, displayName);
 				}
 			}
 		} catch(Exception e) {
@@ -382,7 +393,7 @@ public final class PacketHandler {
 		return null;
 	}
 	
-	public static int getMetadataId(Object metadataItem) {
+	private static int getMetadataId(Object metadataItem) {
 		try {
 			if(VersionHelper.require1_9()) {
 				return (Integer)DataWatcherObject_getId.invoke(DataWatcherItem_dataWatcherObject.get(metadataItem));
@@ -397,7 +408,7 @@ public final class PacketHandler {
 		return 127;
 	}
 	
-	public static String soundEffectToString(Object soundEffect) {
+	private static String soundEffectToString(Object soundEffect) {
 		if(VersionHelper.require1_9()) {
 			try {
 				return (String)MinecraftKey_getName.invoke(RegistryMaterials_getKey.invoke(SoundEffect_registry.get(null), soundEffect));
@@ -412,7 +423,7 @@ public final class PacketHandler {
 		return null;
 	}
 	
-	public static Object soundEffectFromString(String name) {
+	private static Object soundEffectFromString(String name) {
 		if(VersionHelper.require1_9()) {
 			try {
 				return RegistryMaterials_getValue.invoke(SoundEffect_registry.get(null), MinecraftKey_new.newInstance(name));
@@ -427,11 +438,11 @@ public final class PacketHandler {
 		return null;
 	}
 	
-	public static UUID formatUniqueId(UUID origin) {
-		return bungeeCord ? new UUID(origin.getMostSignificantBits() & 0xFFFFFFFFFFFF0FFFL | 0x0000000000005000, origin.getLeastSignificantBits()) : origin;
+	private static UUID formatUniqueId(UUID origin) {
+		return bungeeCord ? new UUID(origin.getMostSignificantBits() & 0xFFFFFFFFFFFF0FFFL | 0x0000000000005000, origin.getLeastSignificantBits()) : origin; // TODO: use different version
 	}
 	
-	public static Object clonePacket(Object packet) {
+	private static Object clonePacket(Object packet) {
 		Object clone = null;
 		try {
 			if(PacketPlayOutPlayerInfo.isInstance(packet)) {
@@ -443,7 +454,7 @@ public final class PacketHandler {
 				PacketPlayOutEntityMetadata_entityId.setInt(clone, PacketPlayOutEntityMetadata_entityId.getInt(packet));
 				PacketPlayOutEntityMetadata_metadataList.set(clone, ((ArrayList<?>)PacketPlayOutEntityMetadata_metadataList.get(packet)).clone());
 			} else if(PacketPlayOutEntity.isInstance(packet)) {
-				clone = packet.getClass().newInstance();
+				clone = packet.getClass().getConstructor().newInstance();
 				PacketPlayOutEntity_entityId.setInt(clone, PacketPlayOutEntity_entityId.getInt(packet));
 				PacketPlayOutEntity_deltaX.set(clone, PacketPlayOutEntity_deltaX.get(packet));
 				PacketPlayOutEntity_deltaY.set(clone, PacketPlayOutEntity_deltaY.get(packet));
@@ -504,368 +515,457 @@ public final class PacketHandler {
 		return clone;
 	}
 	
-	public static Object handlePacketPlayInUseEntity(final Player observer, final Object packet) throws Exception {
-		final UUID livingEntity = EntityIdList.getEntityUIDByEntityId(PacketPlayInUseEntity_entityId.getInt(packet));
-		boolean attack = PacketPlayInUseEntity_getAction.invoke(packet).equals(EnumEntityUseAction_ATTACK.get(null));
-		if(livingEntity != null && !observer.getUniqueId().equals(livingEntity) && DisguiseManager.isDisguisedTo(livingEntity, observer) && !attack) {
-			if(ObjectUtil.equals(DisguiseManager.getDisguise(livingEntity).getType(), DisguiseType.SHEEP, DisguiseType.WOLF)) {
-				Bukkit.getScheduler().runTaskLater(iDisguise.getInstance(), new Runnable() {
-					
-					public void run() {
-						DisguiseManager.resendPackets(EntityIdList.getEntityByUID(livingEntity));
-						observer.updateInventory();
-					}
-					
-				}, 2L);
-			}
-			if(Bukkit.getPlayer(livingEntity) != null) Bukkit.getPluginManager().callEvent(new PlayerInteractDisguisedPlayerEvent(observer, Bukkit.getPlayer(livingEntity)));
-		}
-		return packet;
-	}
-	
-	public static Object[] handlePacketOut(final Player observer, final Object packet) {
+	public static void sendPacket(final Player observer, final Object packet) {
 		try {
-			if(PacketPlayOutNamedEntitySpawn.isInstance(packet)) {
-				return handlePacketPlayOutNamedEntitySpawn(observer, packet);
-			} else if(PacketPlayOutSpawnEntityLiving.isInstance(packet)) {
-				return handlePacketPlayOutSpawnEntityLiving(observer, packet);
-			} else if(PacketPlayOutPlayerInfo.isInstance(packet)) {
-				return new Object[] {handlePacketPlayOutPlayerInfo(observer, packet)};
-			} else if(PacketPlayOutEntityDestroy.isInstance(packet)) {
-				return handlePacketPlayOutEntityDestroy(observer, packet);
-			} else if(PacketPlayOutBed.isInstance(packet)) {
-				return new Object[] {handlePacketPlayOutBed(observer, packet)};
-			} else if(PacketPlayOutAnimation.isInstance(packet)) {
-				return new Object[] {handlePacketPlayOutAnimation(observer, packet)};
-			} else if(PacketPlayOutEntityMetadata.isInstance(packet)) {
-				return new Object[] {handlePacketPlayOutEntityMetadata(observer, packet)};
-			} else if(PacketPlayOutEntity.isInstance(packet)) {
-				return new Object[] {handlePacketPlayOutEntity(observer, packet)};
-			} else if(PacketPlayOutEntityTeleport.isInstance(packet)) {
-				return new Object[] {handlePacketPlayOutEntityTeleport(observer, packet)};
-			} else if(PacketPlayOutUpdateAttributes.isInstance(packet)) {
-				return new Object[] {handlePacketPlayOutUpdateAttributes(observer, packet)};
-			} else if(PacketPlayOutCollect.isInstance(packet)) {
-				return new Object[] {handlePacketPlayOutCollect(observer, packet)};
-			} else if(PacketPlayOutScoreboardTeam.isInstance(packet)) {
-				return new Object[] {handlePacketPlayOutScoreboardTeam(observer, packet)};
-			} else if(PacketPlayOutScoreboardScore.isInstance(packet)) {
-				return new Object[] {handlePacketPlayOutScoreboardScore(observer, packet)};
-			} else if(replaceSoundEffects && PacketPlayOutNamedSoundEffect.isInstance(packet)) {
-				return new Object[] {handlePacketPlayOutNamedSoundEffect(observer, packet)};
+			Channel channel = (Channel)NetworkManager_channel.get(PlayerConnection_networkManager.get(EntityPlayer_playerConnection.get(CraftPlayer_getHandle.invoke(observer))));//.writeAndFlush(packet);
+			if(channel.eventLoop().inEventLoop()) {
+				for(Object p : packet instanceof Object[] ? (Object[])packet : new Object[] {packet}) channel.writeAndFlush(p);
+			} else {
+				channel.eventLoop().execute(() -> {
+					for(Object p : packet instanceof Object[] ? (Object[])packet : new Object[] {packet}) channel.writeAndFlush(p);
+				});
 			}
-			return new Object[] {packet};
 		} catch(Exception e) {
 			if(VersionHelper.debug()) {
-				iDisguise.getInstance().getLogger().log(Level.SEVERE, "Cannot handle packet out: " + packet.getClass().getSimpleName() + " to " + observer.getName(), e);
+				iDisguise.getInstance().getLogger().log(Level.SEVERE, "Cannot send packet: " + packet.getClass().getSimpleName() + " to " + observer.getName(), e);
+			}
+		}
+	}
+	
+	public static void sendPacketUnaltered(final Player observer, final Object packet) {
+		try {
+			Channel channel = (Channel)NetworkManager_channel.get(PlayerConnection_networkManager.get(EntityPlayer_playerConnection.get(CraftPlayer_getHandle.invoke(observer))));//.writeAndFlush(new Unaltered(packet));
+			if(channel.eventLoop().inEventLoop()) {
+				for(Object p : packet instanceof Object[] ? (Object[])packet : new Object[] {packet}) channel.writeAndFlush(new Unaltered(p));
+			} else {
+				channel.eventLoop().execute(() -> {
+					for(Object p : packet instanceof Object[] ? (Object[])packet : new Object[] {packet}) channel.writeAndFlush(new Unaltered(p));
+				});
+			}
+		} catch(Exception e) {
+			if(VersionHelper.debug()) {
+				iDisguise.getInstance().getLogger().log(Level.SEVERE, "Cannot send packet (unaltered): " + packet.getClass().getSimpleName() + " to " + observer.getName(), e);
+			}
+		}
+	}
+	
+	public static Object[] handlePacket(final Player observer, Object packet) {
+		try {
+			if(handlers.containsKey(packet.getClass())) {
+				packet = handlers.get(packet.getClass()).handlePacket(observer, packet);
+			}
+			return packet instanceof Object[] ? (Object[])packet : new Object[] {packet};
+		} catch(Exception e) {
+			if(VersionHelper.debug()) {
+				iDisguise.getInstance().getLogger().log(Level.SEVERE, "Cannot handle packet: " + packet.getClass().getSimpleName() + " for " + observer.getName(), e);
 			}
 		}
 		return new Object[0];
 	}
 	
-	private static Object[] handlePacketPlayOutNamedEntitySpawn(final Player observer, final Object packet) throws Exception {
-		final Player player = EntityIdList.getPlayerByEntityId(PacketPlayOutNamedEntitySpawn_entityId.getInt(packet));
-		if(player != null && player != observer && DisguiseManager.isDisguisedTo(player, observer)) {
-			Object[] spawnPackets = getSpawnPackets(player);
-			if(DisguiseManager.getDisguise(player).getType().equals(DisguiseType.ENDER_DRAGON)) {
-				byte yaw = PacketPlayOutSpawnEntityLiving_yaw.getByte(spawnPackets[0]);
-				if(yaw < 0) {
-					yaw += 128;
-				} else {
-					yaw -= 128;
-				}
-				PacketPlayOutSpawnEntityLiving_yaw.setByte(spawnPackets[0], yaw);
-			} else if(DisguiseManager.getDisguise(player).getType().equals(DisguiseType.FALLING_BLOCK)) {
-				if(DisguiseManager.getDisguise(player) instanceof FallingBlockDisguise && ((FallingBlockDisguise)DisguiseManager.getDisguise(player)).onlyBlockCoordinates()) {
-					if(VersionHelper.require1_9()) {
-						PacketPlayOutSpawnEntity_x.setDouble(spawnPackets[0], Math.floor(player.getLocation().getX()) + 0.5);
-						PacketPlayOutSpawnEntity_y.setDouble(spawnPackets[0], Math.floor(player.getLocation().getY()));
-						PacketPlayOutSpawnEntity_z.setDouble(spawnPackets[0], Math.floor(player.getLocation().getZ()) + 0.5);
-					} else {
-						PacketPlayOutSpawnEntity_x.setInt(spawnPackets[0], (int)((Math.floor(player.getLocation().getX()) + 0.5) * 32));
-						PacketPlayOutSpawnEntity_y.setInt(spawnPackets[0], (int)(Math.floor(player.getLocation().getY()) * 32));
-						PacketPlayOutSpawnEntity_z.setInt(spawnPackets[0], (int)((Math.floor(player.getLocation().getZ()) + 0.5) * 32));
-					}
-				}
-			}
-			return spawnPackets;
-		}
-		return new Object[] {packet};
-	}
+	private static final Map<Class<?>, IPacketHandler> handlers;
 	
-	private static Object[] handlePacketPlayOutSpawnEntityLiving(final Player observer, final Object packet) throws Exception {
-		final UUID livingEntityUID = EntityIdList.getEntityUIDByEntityId(PacketPlayOutSpawnEntityLiving_entityId.getInt(packet));
-		if(livingEntityUID != null && DisguiseManager.isDisguisedTo(livingEntityUID, observer)) {
-			LivingEntity livingEntity = EntityIdList.getEntityByUID(livingEntityUID);
-			Object[] spawnPackets = getSpawnPackets(livingEntity);
-			if(DisguiseManager.getDisguise(livingEntityUID).getType().equals(DisguiseType.PLAYER) && !modifyPlayerListEntry) {
-				final Object playerInfoRemovePacket = spawnPackets[2];
-				spawnPackets = new Object[] {spawnPackets[0], spawnPackets[1]};
-				Bukkit.getScheduler().runTaskLater(iDisguise.getInstance(), new Runnable() {
-					
-					public void run() {
-						try {
-							((InjectedPlayerConnection)EntityPlayer_playerConnection.get(CraftPlayer_getHandle.invoke(observer))).sendPacket(playerInfoRemovePacket);
-						} catch(Exception e) {
-							if(VersionHelper.debug()) {
-								iDisguise.getInstance().getLogger().log(Level.SEVERE, "Cannot handle packet out: " + packet.getClass().getSimpleName() + " to " + observer.getName(), e);
-							}
+	static {
+		Map<Class<?>, IPacketHandler> localHandlers = new HashMap<Class<?>, IPacketHandler>();
+		
+		localHandlers.put(PacketPlayOutNamedEntitySpawn, (final Player observer, final Object packet) -> {
+			final UUID disguisable = EntityIdList.getEntityUIDByEntityId(PacketPlayOutNamedEntitySpawn_entityId.getInt(packet));
+			if(disguisable != null && EntityIdList.isPlayer(disguisable) && !observer.getUniqueId().equals(disguisable) && DisguiseManager.isDisguisedTo(disguisable, observer)) {
+				Object[] spawnPackets = VersionHelper.require1_9() ?
+						getSpawnPackets(disguisable,
+								null,
+								PacketPlayOutNamedEntitySpawn_entityId.getInt(packet),
+								PacketPlayOutNamedEntitySpawn_x.getDouble(packet),
+								PacketPlayOutNamedEntitySpawn_y.getDouble(packet),
+								PacketPlayOutNamedEntitySpawn_z.getDouble(packet),
+								PacketPlayOutNamedEntitySpawn_yaw.getByte(packet) * 360.0F / 256.0F,
+								PacketPlayOutNamedEntitySpawn_pitch.getByte(packet) * 360.0F / 256.0F,
+								observer) :
+						getSpawnPackets(disguisable,
+								null,
+								PacketPlayOutNamedEntitySpawn_entityId.getInt(packet),
+								PacketPlayOutNamedEntitySpawn_x.getInt(packet) / 32.0,
+								PacketPlayOutNamedEntitySpawn_y.getInt(packet) / 32.0,
+								PacketPlayOutNamedEntitySpawn_z.getInt(packet) / 32.0,
+								PacketPlayOutNamedEntitySpawn_yaw.getByte(packet) * 360.0F / 256.0F,
+								PacketPlayOutNamedEntitySpawn_pitch.getByte(packet) * 360.0F / 256.0F,
+								observer);
+				if(DisguiseManager.getDisguise(disguisable).getType().equals(DisguiseType.ENDER_DRAGON)) {
+					byte yaw = PacketPlayOutSpawnEntityLiving_yaw.getByte(spawnPackets[0]);
+					if(yaw < 0) {
+						yaw += 128;
+					} else {
+						yaw -= 128;
+					}
+					PacketPlayOutSpawnEntityLiving_yaw.setByte(spawnPackets[0], yaw);
+				} else if(DisguiseManager.getDisguise(disguisable).getType().equals(DisguiseType.FALLING_BLOCK)) {
+					if(DisguiseManager.getDisguise(disguisable) instanceof FallingBlockDisguise && ((FallingBlockDisguise)DisguiseManager.getDisguise(disguisable)).onlyBlockCoordinates()) {
+						if(VersionHelper.require1_9()) {
+							PacketPlayOutSpawnEntity_x.setDouble(spawnPackets[0], Math.floor(PacketPlayOutSpawnEntity_x.getDouble(spawnPackets[0])) + 0.5);
+							PacketPlayOutSpawnEntity_y.setDouble(spawnPackets[0], Math.floor(PacketPlayOutSpawnEntity_y.getDouble(spawnPackets[0])));
+							PacketPlayOutSpawnEntity_z.setDouble(spawnPackets[0], Math.floor(PacketPlayOutSpawnEntity_z.getDouble(spawnPackets[0])) + 0.5);
+						} else {
+							PacketPlayOutSpawnEntity_x.setInt(spawnPackets[0], (int)((Math.floor(PacketPlayOutSpawnEntity_x.getInt(spawnPackets[0]) / 32.0) + 0.5) * 32));
+							PacketPlayOutSpawnEntity_y.setInt(spawnPackets[0], (int)(Math.floor(PacketPlayOutSpawnEntity_y.getInt(spawnPackets[0]) / 32.0) * 32));
+							PacketPlayOutSpawnEntity_z.setInt(spawnPackets[0], (int)((Math.floor(PacketPlayOutSpawnEntity_z.getInt(spawnPackets[0]) / 32.0) + 0.5) * 32));
 						}
 					}
-					
-				}, 40L);
-			} else if(DisguiseManager.getDisguise(livingEntityUID).getType().equals(DisguiseType.FALLING_BLOCK)) {
-				if(DisguiseManager.getDisguise(livingEntityUID) instanceof FallingBlockDisguise && ((FallingBlockDisguise)DisguiseManager.getDisguise(livingEntityUID)).onlyBlockCoordinates()) {
-					if(VersionHelper.require1_9()) {
-						PacketPlayOutSpawnEntity_x.setDouble(spawnPackets[0], Math.floor(livingEntity.getLocation().getX()) + 0.5);
-						PacketPlayOutSpawnEntity_y.setDouble(spawnPackets[0], Math.floor(livingEntity.getLocation().getY()));
-						PacketPlayOutSpawnEntity_z.setDouble(spawnPackets[0], Math.floor(livingEntity.getLocation().getZ()) + 0.5);
-					} else {
-						PacketPlayOutSpawnEntity_x.setInt(spawnPackets[0], (int)((Math.floor(livingEntity.getLocation().getX()) + 0.5) * 32));
-						PacketPlayOutSpawnEntity_y.setInt(spawnPackets[0], (int)(Math.floor(livingEntity.getLocation().getY()) * 32));
-						PacketPlayOutSpawnEntity_z.setInt(spawnPackets[0], (int)((Math.floor(livingEntity.getLocation().getZ()) + 0.5) * 32));
+				}
+				return spawnPackets;
+			}
+			return new Object[] {packet};
+		});
+		
+		localHandlers.put(PacketPlayOutSpawnEntityLiving, (final Player observer, final Object packet) -> {
+			final UUID disguisable = EntityIdList.getEntityUIDByEntityId(PacketPlayOutSpawnEntityLiving_entityId.getInt(packet));
+			if(disguisable != null && DisguiseManager.isDisguisedTo(disguisable, observer)) {
+				Object[] spawnPackets = VersionHelper.require1_9() ?
+						getSpawnPackets(disguisable,
+								null,
+								PacketPlayOutSpawnEntityLiving_entityId.getInt(packet),
+								PacketPlayOutSpawnEntityLiving_x.getDouble(packet),
+								PacketPlayOutSpawnEntityLiving_y.getDouble(packet),
+								PacketPlayOutSpawnEntityLiving_z.getDouble(packet),
+								PacketPlayOutSpawnEntityLiving_yaw.getByte(packet) * 360.0F / 256.0F,
+								PacketPlayOutSpawnEntityLiving_pitch.getByte(packet) * 360.0F / 256.0F,
+								observer) :
+						getSpawnPackets(disguisable,
+								null,
+								PacketPlayOutSpawnEntityLiving_entityId.getInt(packet),
+								PacketPlayOutSpawnEntityLiving_x.getInt(packet) / 32.0,
+								PacketPlayOutSpawnEntityLiving_y.getInt(packet) / 32.0,
+								PacketPlayOutSpawnEntityLiving_z.getInt(packet) / 32.0,
+								PacketPlayOutSpawnEntityLiving_yaw.getByte(packet) * 360.0F / 256.0F,
+								PacketPlayOutSpawnEntityLiving_pitch.getByte(packet) * 360.0F / 256.0F,
+								observer);
+				if(DisguiseManager.getDisguise(disguisable).getType().equals(DisguiseType.PLAYER) && !modifyPlayerListEntry) {
+					final Object playerInfoRemovePacket = spawnPackets[2];
+					spawnPackets = new Object[] {spawnPackets[0], spawnPackets[1]};
+					Bukkit.getScheduler().runTaskLater(iDisguise.getInstance(), () -> {
+						try {
+							sendPacketUnaltered(observer, playerInfoRemovePacket);
+						} catch(Exception e) {
+							if(VersionHelper.debug()) {
+								iDisguise.getInstance().getLogger().log(Level.SEVERE, "Cannot handle packet: " + packet.getClass().getSimpleName() + " for " + observer.getName(), e);
+							}
+						}
+					}, 40L);
+				} else if(DisguiseManager.getDisguise(disguisable).getType().equals(DisguiseType.FALLING_BLOCK)) {
+					if(DisguiseManager.getDisguise(disguisable) instanceof FallingBlockDisguise && ((FallingBlockDisguise)DisguiseManager.getDisguise(disguisable)).onlyBlockCoordinates()) {
+						if(VersionHelper.require1_9()) {
+							PacketPlayOutSpawnEntity_x.setDouble(spawnPackets[0], Math.floor(PacketPlayOutSpawnEntity_x.getDouble(spawnPackets[0])) + 0.5);
+							PacketPlayOutSpawnEntity_y.setDouble(spawnPackets[0], Math.floor(PacketPlayOutSpawnEntity_y.getDouble(spawnPackets[0])));
+							PacketPlayOutSpawnEntity_z.setDouble(spawnPackets[0], Math.floor(PacketPlayOutSpawnEntity_z.getDouble(spawnPackets[0])) + 0.5);
+						} else {
+							PacketPlayOutSpawnEntity_x.setInt(spawnPackets[0], (int)((Math.floor(PacketPlayOutSpawnEntity_x.getInt(spawnPackets[0]) / 32.0) + 0.5) * 32));
+							PacketPlayOutSpawnEntity_y.setInt(spawnPackets[0], (int)(Math.floor(PacketPlayOutSpawnEntity_y.getInt(spawnPackets[0]) / 32.0) * 32));
+							PacketPlayOutSpawnEntity_z.setInt(spawnPackets[0], (int)((Math.floor(PacketPlayOutSpawnEntity_z.getInt(spawnPackets[0]) / 32.0) + 0.5) * 32));
+						}
 					}
+				} else if(DisguiseManager.getDisguise(disguisable).getType().equals(DisguiseType.ENDER_DRAGON) ^ EntityIdList.isEnderDragon(disguisable)) {
+					byte yaw = PacketPlayOutSpawnEntityLiving_yaw.getByte(spawnPackets[0]);
+					if(yaw < 0) {
+						yaw += 128;
+					} else {
+						yaw -= 128;
+					}
+					PacketPlayOutSpawnEntityLiving_yaw.setByte(spawnPackets[0], yaw);
 				}
-			} else if(DisguiseManager.getDisguise(livingEntityUID).getType().equals(DisguiseType.ENDER_DRAGON) ^ livingEntity instanceof EnderDragon) {
-				byte yaw = PacketPlayOutSpawnEntityLiving_yaw.getByte(spawnPackets[0]);
-				if(yaw < 0) {
-					yaw += 128;
-				} else {
-					yaw -= 128;
-				}
-				PacketPlayOutSpawnEntityLiving_yaw.setByte(spawnPackets[0], yaw);
+				return spawnPackets;
 			}
-			return spawnPackets;
-		}
-		return new Object[] {packet};
-	}
-	
-	private static Object handlePacketPlayOutPlayerInfo(final Player observer, final Object packet) throws Exception {
-		Object customizablePacket = clonePacket(packet);
-		List playerInfoList = (List)PacketPlayOutPlayerInfo_playerInfoList.get(customizablePacket);
-		List itemsToAdd = new ArrayList();
-		List itemsToRemove = new ArrayList();
-		for(Object playerInfo : playerInfoList) {
-			OfflinePlayer offlinePlayer = Bukkit.getOfflinePlayer((UUID)GameProfile_getProfileId.invoke(PlayerInfoData_getProfile.invoke(playerInfo)));
-			if(offlinePlayer != null && (disguiseViewSelf || offlinePlayer != observer) && DisguiseManager.isDisguisedTo(offlinePlayer, observer)) {
-				Object newPlayerInfo = getPlayerInfo(offlinePlayer, observer, customizablePacket, (Integer)PlayerInfoData_getPing.invoke(playerInfo), PlayerInfoData_getGamemode.invoke(playerInfo), PlayerInfoData_getDisplayName.invoke(playerInfo));
-				itemsToRemove.add(playerInfo);
-				if(newPlayerInfo != null) {
-					itemsToAdd.add(newPlayerInfo);
-				}
-			}
-		}
-		playerInfoList.removeAll(itemsToRemove);
-		playerInfoList.addAll(itemsToAdd);
-		return customizablePacket;
-	}
-	
-	private static Object handlePacketPlayOutBed(final Player observer, final Object packet) throws Exception {
-		final Player player = EntityIdList.getPlayerByEntityId(PacketPlayOutBed_entityId.getInt(packet));
-		if(player != null && player != observer && DisguiseManager.isDisguisedTo(player, observer) && !(DisguiseManager.getDisguise(player) instanceof PlayerDisguise)) {
-			return null;
-		}
-		return packet;
-	}
-	
-	private static Object handlePacketPlayOutAnimation(final Player observer, final Object packet) throws Exception {
-		final UUID livingEntity = EntityIdList.getEntityUIDByEntityId(PacketPlayOutAnimation_entityId.getInt(packet));
-		if(livingEntity != null && !observer.getUniqueId().equals(livingEntity) && DisguiseManager.isDisguisedTo(livingEntity, observer) && !(DisguiseManager.getDisguise(livingEntity) instanceof PlayerDisguise)) {
-			if(DisguiseManager.getDisguise(livingEntity) instanceof MobDisguise) {
-				if(PacketPlayOutAnimation_animationType.getInt(packet) == 2) {
-					return null;
-				}
-			} else if(DisguiseManager.getDisguise(livingEntity) instanceof ObjectDisguise) {
-				if(ObjectUtil.equals(PacketPlayOutAnimation_animationType.getInt(packet), 0, 2, 3)) {
-					return null;
-				}
-			}
-		}
-		return packet;
-	}
-	
-	private static Object handlePacketPlayOutEntityMetadata(final Player observer, final Object packet) throws Exception {
-		final UUID livingEntity = EntityIdList.getEntityUIDByEntityId(PacketPlayOutEntityMetadata_entityId.getInt(packet));
-		if(livingEntity != null && !observer.getUniqueId().equals(livingEntity) && DisguiseManager.isDisguisedTo(livingEntity, observer)/* && !(DisguiseManager.getDisguise(livingEntity) instanceof PlayerDisguise)*/) {
+			return new Object[] {packet};
+		});
+		
+		localHandlers.put(PacketPlayOutPlayerInfo, (final Player observer, final Object packet) -> {
 			Object customizablePacket = clonePacket(packet);
-			boolean living = DisguiseManager.getDisguise(livingEntity) instanceof MobDisguise;
-			List metadataList = (List)PacketPlayOutEntityMetadata_metadataList.get(customizablePacket);
+			List playerInfoList = (List)PacketPlayOutPlayerInfo_playerInfoList.get(customizablePacket);
+			List itemsToAdd = new ArrayList();
 			List itemsToRemove = new ArrayList();
-			for(Object metadataItem : metadataList) {
-				int metadataId = getMetadataId(metadataItem);
-				if(living) {
-					if(!ObjectUtil.equals(metadataId, 0, 6, 7, 8, 9, 10)) itemsToRemove.add(metadataItem);
-				} else {
-					if(metadataId != 0) itemsToRemove.add(metadataItem);
+			for(Object playerInfo : playerInfoList) {
+				UUID disguisable = (UUID)GameProfile_getProfileId.invoke(PlayerInfoData_getProfile.invoke(playerInfo));
+				if(disguisable != null && (disguiseViewSelf || !observer.getUniqueId().equals(disguisable)) && DisguiseManager.isDisguisedTo(disguisable, observer)) {
+					Object newPlayerInfo = getPlayerInfo(disguisable, observer, customizablePacket, playerInfo);
+					itemsToRemove.add(playerInfo);
+					if(newPlayerInfo != null) {
+						itemsToAdd.add(newPlayerInfo);
+					}
 				}
 			}
-			metadataList.removeAll(itemsToRemove);
+			playerInfoList.removeAll(itemsToRemove);
+			playerInfoList.addAll(itemsToAdd);
 			return customizablePacket;
-		}
-		return packet;
-	}
-	
-	private static Object handlePacketPlayOutEntity(final Player observer, final Object packet) throws Exception {
-		final UUID livingEntityUID = EntityIdList.getEntityUIDByEntityId(PacketPlayOutEntity_entityId.getInt(packet));
-		if(livingEntityUID != null && !observer.getUniqueId().equals(livingEntityUID) && DisguiseManager.isDisguisedTo(livingEntityUID, observer)) {
-			LivingEntity livingEntity = EntityIdList.getEntityByUID(livingEntityUID);
-			if(DisguiseManager.getDisguise(livingEntityUID).getType().equals(DisguiseType.FALLING_BLOCK)) {
-				if(DisguiseManager.getDisguise(livingEntityUID) instanceof FallingBlockDisguise && ((FallingBlockDisguise)DisguiseManager.getDisguise(livingEntityUID)).onlyBlockCoordinates()) {
-					Object customizablePacket = PacketPlayOutEntityTeleport_new.newInstance();
-					PacketPlayOutEntityTeleport_entityId.setInt(customizablePacket, livingEntity.getEntityId());
-					if(VersionHelper.require1_9()) {
-						PacketPlayOutEntityTeleport_x.setDouble(customizablePacket, Math.floor(livingEntity.getLocation().getX()) + 0.5);
-						PacketPlayOutEntityTeleport_y.setDouble(customizablePacket, Math.floor(livingEntity.getLocation().getY()));
-						PacketPlayOutEntityTeleport_z.setDouble(customizablePacket, Math.floor(livingEntity.getLocation().getZ()) + 0.5);
-					} else {
-						PacketPlayOutEntityTeleport_x.setInt(customizablePacket, (int)((Math.floor(livingEntity.getLocation().getX()) + 0.5) * 32));
-						PacketPlayOutEntityTeleport_y.setInt(customizablePacket, (int)(Math.floor(livingEntity.getLocation().getY()) * 32));
-						PacketPlayOutEntityTeleport_z.setInt(customizablePacket, (int)((Math.floor(livingEntity.getLocation().getZ()) + 0.5) * 32));
-					}
-					PacketPlayOutEntityTeleport_yaw.setByte(customizablePacket, (byte)(livingEntity.getLocation().getYaw() * 256 / 360));
-					PacketPlayOutEntityTeleport_pitch.setByte(customizablePacket, (byte)(livingEntity.getLocation().getPitch() * 256 / 360));
-					PacketPlayOutEntityTeleport_isOnGround.setBoolean(customizablePacket, PacketPlayOutEntity_isOnGround.getBoolean(packet));
-					return customizablePacket;
-				}
-			} else if(DisguiseManager.getDisguise(livingEntityUID).getType().equals(DisguiseType.ENDER_DRAGON) ^ livingEntity instanceof EnderDragon) {
-				Object customizablePacket = clonePacket(packet);
-				byte yaw = PacketPlayOutEntity_yaw.getByte(customizablePacket);
-				if(yaw < 0) {
-					yaw += 128;
-				} else {
-					yaw -= 128;
-				}
-				PacketPlayOutEntity_yaw.setByte(customizablePacket, yaw);
-				return customizablePacket;
-			} 
-		}
-		return packet;
-	}
-	
-	private static Object handlePacketPlayOutEntityTeleport(final Player observer, final Object packet) throws Exception {
-		final UUID livingEntityUID = EntityIdList.getEntityUIDByEntityId(PacketPlayOutEntityTeleport_entityId.getInt(packet));
-		if(livingEntityUID != null && !observer.getUniqueId().equals(livingEntityUID) && DisguiseManager.isDisguisedTo(livingEntityUID, observer)) {
-			LivingEntity livingEntity = EntityIdList.getEntityByUID(livingEntityUID);
-			if(DisguiseManager.getDisguise(livingEntityUID).getType().equals(DisguiseType.FALLING_BLOCK)) {
-				if(DisguiseManager.getDisguise(livingEntityUID) instanceof FallingBlockDisguise && ((FallingBlockDisguise)DisguiseManager.getDisguise(livingEntityUID)).onlyBlockCoordinates()) {
-					Object customizablePacket = clonePacket(packet);
-					if(VersionHelper.require1_9()) {
-						PacketPlayOutEntityTeleport_x.setDouble(customizablePacket, Math.floor(livingEntity.getLocation().getX()) + 0.5);
-						PacketPlayOutEntityTeleport_y.setDouble(customizablePacket, Math.floor(livingEntity.getLocation().getY()));
-						PacketPlayOutEntityTeleport_z.setDouble(customizablePacket, Math.floor(livingEntity.getLocation().getZ()) + 0.5);
-					} else {
-						PacketPlayOutEntityTeleport_x.setInt(customizablePacket, (int)((Math.floor(livingEntity.getLocation().getX()) + 0.5) * 32));
-						PacketPlayOutEntityTeleport_y.setInt(customizablePacket, (int)(Math.floor(livingEntity.getLocation().getY()) * 32));
-						PacketPlayOutEntityTeleport_z.setInt(customizablePacket, (int)((Math.floor(livingEntity.getLocation().getZ()) + 0.5) * 32));
-					}
-					return customizablePacket;
-				}
-			} else if(DisguiseManager.getDisguise(livingEntityUID).getType().equals(DisguiseType.ENDER_DRAGON) ^ livingEntity instanceof EnderDragon) {
-				Object customizablePacket = clonePacket(packet);
-				byte yaw = PacketPlayOutEntityTeleport_yaw.getByte(customizablePacket);
-				if(yaw < 0) {
-					yaw += 128;
-				} else {
-					yaw -= 128;
-				}
-				PacketPlayOutEntityTeleport_yaw.setByte(customizablePacket, yaw);
-				return customizablePacket;
+		});
+		
+		localHandlers.put(PacketPlayOutBed, (final Player observer, final Object packet) -> {
+			final UUID disguisable = EntityIdList.getEntityUIDByEntityId(PacketPlayOutBed_entityId.getInt(packet));
+			if(disguisable != null && !observer.getUniqueId().equals(disguisable) && DisguiseManager.isDisguisedTo(disguisable, observer) && !(DisguiseManager.getDisguise(disguisable) instanceof PlayerDisguise)) {
+				return null;
 			}
-		}
-		return packet;
-	}
-	
-	private static Object handlePacketPlayOutUpdateAttributes(final Player observer, final Object packet) throws Exception {
-		final UUID livingEntity = EntityIdList.getEntityUIDByEntityId(PacketPlayOutUpdateAttributes_entityId.getInt(packet));
-		if(livingEntity != null && !observer.getUniqueId().equals(livingEntity) && DisguiseManager.isDisguisedTo(livingEntity, observer) && DisguiseManager.getDisguise(livingEntity) instanceof ObjectDisguise) {
-			return null;
-		}
-		return packet;
-	}
-	
-	private static Object handlePacketPlayOutCollect(final Player observer, final Object packet) throws Exception {
-		final UUID livingEntity = EntityIdList.getEntityUIDByEntityId(PacketPlayOutCollect_entityId.getInt(packet));
-		if(livingEntity != null && !observer.getUniqueId().equals(livingEntity) && DisguiseManager.isDisguisedTo(livingEntity, observer) && DisguiseManager.getDisguise(livingEntity) instanceof ObjectDisguise) {
-			return null;
-		}
-		return packet;
-	}
-	
-	private static Object handlePacketPlayOutNamedSoundEffect(final Player observer, final Object packet) throws Exception {
-		String soundEffect = soundEffectToString(PacketPlayOutNamedSoundEffect_soundEffect.get(packet));
-		LivingEntity livingEntity = EntityIdList.getClosestEntity(new Location(observer.getWorld(), PacketPlayOutNamedSoundEffect_x.getInt(packet) / 8.0, PacketPlayOutNamedSoundEffect_y.getInt(packet) / 8.0, PacketPlayOutNamedSoundEffect_z.getInt(packet) / 8.0), 1.0);
-		if(livingEntity != null && livingEntity != observer && DisguiseManager.isDisguisedTo(livingEntity, observer)) {
-			String newSoundEffect = Sounds.replaceSoundEffect(DisguiseType.fromEntityType(livingEntity.getType()), soundEffect, DisguiseManager.getDisguise(livingEntity));
-			if(!soundEffect.equals(newSoundEffect)) {
-				if(newSoundEffect != null) {
-					Object nmsSoundEffect = soundEffectFromString(newSoundEffect);
-					if(nmsSoundEffect != null) {
-						Object customizablePacket = clonePacket(packet);
-						PacketPlayOutNamedSoundEffect_soundEffect.set(customizablePacket, nmsSoundEffect);
-						return customizablePacket;
-					} else {
+			return packet;
+		});
+		
+		localHandlers.put(PacketPlayOutAnimation, (final Player observer, final Object packet) -> {
+			final UUID disguisable = EntityIdList.getEntityUIDByEntityId(PacketPlayOutAnimation_entityId.getInt(packet));
+			if(disguisable != null && !observer.getUniqueId().equals(disguisable) && DisguiseManager.isDisguisedTo(disguisable, observer) && !(DisguiseManager.getDisguise(disguisable) instanceof PlayerDisguise)) {
+				if(DisguiseManager.getDisguise(disguisable) instanceof MobDisguise) {
+					if(PacketPlayOutAnimation_animationType.getInt(packet) == 2) {
 						return null;
 					}
-				} else {
-					return null;
+				} else if(DisguiseManager.getDisguise(disguisable) instanceof ObjectDisguise) {
+					if(ObjectUtil.equals(PacketPlayOutAnimation_animationType.getInt(packet), 0, 2, 3)) {
+						return null;
+					}
 				}
 			}
-		}
-		return packet;
-	}
-	
-	private static Object handlePacketPlayOutScoreboardTeam(final Player observer, final Object packet) throws Exception {
-		if(modifyScoreboardPackets && ObjectUtil.equals(PacketPlayOutScoreboardTeam_action.getInt(packet), 0, 3, 4)) {
-			Object customizablePacket = clonePacket(packet);
-			List<String> entries = (List<String>)PacketPlayOutScoreboardTeam_entries.get(customizablePacket);
-			List<String> itemsToRemove = new ArrayList<String>();
-			List<String> itemsToAdd = new ArrayList<String>();
-			for(String entry : entries) {
-				Player player = Bukkit.getPlayer(entry);
-				if(player != null && player != observer && DisguiseManager.isDisguisedTo(player, observer) && DisguiseManager.getDisguise(player) instanceof PlayerDisguise) {
-					itemsToRemove.add(entry);
-					itemsToAdd.add(((PlayerDisguise)DisguiseManager.getDisguise(player)).getDisplayName());
-				}
-			}
-			entries.removeAll(itemsToRemove);
-			entries.addAll(itemsToAdd);
-			return customizablePacket;
-		}
-		return packet;
-	}
-	
-	private static Object handlePacketPlayOutScoreboardScore(final Player observer, final Object packet) throws Exception {
-		if(modifyScoreboardPackets) {
-			Player player = Bukkit.getPlayer((String)PacketPlayOutScoreboardScore_entry.get(packet));
-			if(player != null && player != observer && DisguiseManager.isDisguisedTo(player, observer) && DisguiseManager.getDisguise(player) instanceof PlayerDisguise) {
+			return packet;
+		});
+		
+		localHandlers.put(PacketPlayOutEntityMetadata, (final Player observer, final Object packet) -> {
+			final UUID disguisable = EntityIdList.getEntityUIDByEntityId(PacketPlayOutEntityMetadata_entityId.getInt(packet));
+			if(disguisable != null && !observer.getUniqueId().equals(disguisable) && DisguiseManager.isDisguisedTo(disguisable, observer)/* && !(DisguiseManager.getDisguise(livingEntity) instanceof PlayerDisguise)*/) {
 				Object customizablePacket = clonePacket(packet);
-				PacketPlayOutScoreboardScore_entry.set(customizablePacket, ((PlayerDisguise)DisguiseManager.getDisguise(player)).getDisplayName());
+				boolean living = DisguiseManager.getDisguise(disguisable) instanceof MobDisguise;
+				List metadataList = (List)PacketPlayOutEntityMetadata_metadataList.get(customizablePacket);
+				List itemsToRemove = new ArrayList();
+				for(Object metadataItem : metadataList) {
+					int metadataId = getMetadataId(metadataItem);
+					if(living) {
+						if(!ObjectUtil.equals(metadataId, 0, 6, 7, 8, 9, 10)) itemsToRemove.add(metadataItem);
+					} else {
+						if(metadataId != 0) itemsToRemove.add(metadataItem);
+					}
+				}
+				metadataList.removeAll(itemsToRemove);
 				return customizablePacket;
 			}
-		}
-		return packet;
+			return packet;
+		});
+		
+		IPacketHandler playOutEntityHandler = (final Player observer, final Object packet) -> {
+			final UUID disguisable = EntityIdList.getEntityUIDByEntityId(PacketPlayOutEntity_entityId.getInt(packet));
+			if(disguisable != null && !observer.getUniqueId().equals(disguisable) && DisguiseManager.isDisguisedTo(disguisable, observer)) {
+				if(DisguiseManager.getDisguise(disguisable).getType().equals(DisguiseType.FALLING_BLOCK)) {
+					if(DisguiseManager.getDisguise(disguisable) instanceof FallingBlockDisguise && ((FallingBlockDisguise)DisguiseManager.getDisguise(disguisable)).onlyBlockCoordinates()) {
+						Bukkit.getScheduler().runTask(iDisguise.getInstance(), () -> {
+							try {
+								final LivingEntity livingEntity = EntityIdList.getEntityByUID(disguisable);
+								Object customizablePacket = PacketPlayOutEntityTeleport_new.newInstance();
+								PacketPlayOutEntityTeleport_entityId.setInt(customizablePacket, PacketPlayOutEntity_entityId.getInt(packet));
+								if(VersionHelper.require1_9()) {
+									PacketPlayOutEntityTeleport_x.setDouble(customizablePacket, Math.floor(livingEntity.getLocation().getX()) + 0.5);
+									PacketPlayOutEntityTeleport_y.setDouble(customizablePacket, Math.floor(livingEntity.getLocation().getY()));
+									PacketPlayOutEntityTeleport_z.setDouble(customizablePacket, Math.floor(livingEntity.getLocation().getZ()) + 0.5);
+								} else {
+									PacketPlayOutEntityTeleport_x.setInt(customizablePacket, (int)((Math.floor(livingEntity.getLocation().getX()) + 0.5) * 32));
+									PacketPlayOutEntityTeleport_y.setInt(customizablePacket, (int)(Math.floor(livingEntity.getLocation().getY()) * 32));
+									PacketPlayOutEntityTeleport_z.setInt(customizablePacket, (int)((Math.floor(livingEntity.getLocation().getZ()) + 0.5) * 32));
+								}
+								PacketPlayOutEntityTeleport_yaw.setByte(customizablePacket, (byte)(livingEntity.getLocation().getYaw() * 256 / 360));
+								PacketPlayOutEntityTeleport_pitch.setByte(customizablePacket, (byte)(livingEntity.getLocation().getPitch() * 256 / 360));
+								PacketPlayOutEntityTeleport_isOnGround.setBoolean(customizablePacket, PacketPlayOutEntity_isOnGround.getBoolean(packet));
+								sendPacketUnaltered(observer, customizablePacket);
+							} catch(Exception e) {
+								if(VersionHelper.debug()) {
+									iDisguise.getInstance().getLogger().log(Level.SEVERE, "Cannot handle packet: " + packet.getClass().getSimpleName() + " for " + observer.getName(), e);
+								}
+							}
+						});
+						return null;
+					}
+				} else if(DisguiseManager.getDisguise(disguisable).getType().equals(DisguiseType.ENDER_DRAGON) ^ EntityIdList.isEnderDragon(disguisable)) {
+					Object customizablePacket = clonePacket(packet);
+					byte yaw = PacketPlayOutEntity_yaw.getByte(customizablePacket);
+					if(yaw < 0) {
+						yaw += 128;
+					} else {
+						yaw -= 128;
+					}
+					PacketPlayOutEntity_yaw.setByte(customizablePacket, yaw);
+					return customizablePacket;
+				} 
+			}
+			return packet;
+		};
+		for(Class<?> clazz : new Class<?>[] {PacketPlayOutEntity, PacketPlayOutEntityLook, PacketPlayOutRelEntityMove, PacketPlayOutRelEntityMoveLook}) localHandlers.put(clazz, playOutEntityHandler);
+		
+		localHandlers.put(PacketPlayOutEntityTeleport, (final Player observer, final Object packet) -> {
+			final UUID disguisable = EntityIdList.getEntityUIDByEntityId(PacketPlayOutEntityTeleport_entityId.getInt(packet));
+			if(disguisable != null && !observer.getUniqueId().equals(disguisable) && DisguiseManager.isDisguisedTo(disguisable, observer)) {
+				if(DisguiseManager.getDisguise(disguisable).getType().equals(DisguiseType.FALLING_BLOCK)) {
+					if(DisguiseManager.getDisguise(disguisable) instanceof FallingBlockDisguise && ((FallingBlockDisguise)DisguiseManager.getDisguise(disguisable)).onlyBlockCoordinates()) {
+						Object customizablePacket = clonePacket(packet);
+						if(VersionHelper.require1_9()) {
+							PacketPlayOutEntityTeleport_x.setDouble(customizablePacket, Math.floor(PacketPlayOutEntityTeleport_x.getDouble(packet)) + 0.5);
+							PacketPlayOutEntityTeleport_y.setDouble(customizablePacket, Math.floor(PacketPlayOutEntityTeleport_y.getDouble(packet)));
+							PacketPlayOutEntityTeleport_z.setDouble(customizablePacket, Math.floor(PacketPlayOutEntityTeleport_z.getDouble(packet)) + 0.5);
+						} else {
+							PacketPlayOutEntityTeleport_x.setInt(customizablePacket, (int)((Math.floor(PacketPlayOutEntityTeleport_x.getInt(packet) / 32.0) + 0.5) * 32));
+							PacketPlayOutEntityTeleport_y.setInt(customizablePacket, (int)(Math.floor(PacketPlayOutEntityTeleport_y.getInt(packet) / 32.0) * 32));
+							PacketPlayOutEntityTeleport_z.setInt(customizablePacket, (int)((Math.floor(PacketPlayOutEntityTeleport_x.getInt(packet) / 32.0) + 0.5) * 32));
+						}
+						return customizablePacket;
+					}
+				} else if(DisguiseManager.getDisguise(disguisable).getType().equals(DisguiseType.ENDER_DRAGON) ^ EntityIdList.isEnderDragon(disguisable)) {
+					Object customizablePacket = clonePacket(packet);
+					byte yaw = PacketPlayOutEntityTeleport_yaw.getByte(customizablePacket);
+					if(yaw < 0) {
+						yaw += 128;
+					} else {
+						yaw -= 128;
+					}
+					PacketPlayOutEntityTeleport_yaw.setByte(customizablePacket, yaw);
+					return customizablePacket;
+				}
+			}
+			return packet;
+		});
+		
+		localHandlers.put(PacketPlayOutUpdateAttributes, (final Player observer, final Object packet) -> {
+			final UUID disguisable = EntityIdList.getEntityUIDByEntityId(PacketPlayOutUpdateAttributes_entityId.getInt(packet));
+			if(disguisable != null && !observer.getUniqueId().equals(disguisable) && DisguiseManager.isDisguisedTo(disguisable, observer) && DisguiseManager.getDisguise(disguisable) instanceof ObjectDisguise) {
+				return null;
+			}
+			return packet;
+		});
+		
+		localHandlers.put(PacketPlayOutCollect, (final Player observer, final Object packet) -> {
+			final UUID disguisable = EntityIdList.getEntityUIDByEntityId(PacketPlayOutCollect_entityId.getInt(packet));
+			if(disguisable != null && !observer.getUniqueId().equals(disguisable) && DisguiseManager.isDisguisedTo(disguisable, observer) && DisguiseManager.getDisguise(disguisable) instanceof ObjectDisguise) {
+				return null;
+			}
+			return packet;
+		});
+		
+		localHandlers.put(PacketPlayOutNamedSoundEffect, (final Player observer, final Object packet) -> {
+			if(replaceSoundEffects) {
+				Bukkit.getScheduler().runTask(iDisguise.getInstance(), () -> {
+					try {
+						String soundEffect = soundEffectToString(PacketPlayOutNamedSoundEffect_soundEffect.get(packet));
+						LivingEntity livingEntity = EntityIdList.getClosestEntity(new Location(observer.getWorld(), PacketPlayOutNamedSoundEffect_x.getInt(packet) / 8.0, PacketPlayOutNamedSoundEffect_y.getInt(packet) / 8.0, PacketPlayOutNamedSoundEffect_z.getInt(packet) / 8.0), 1.0);
+						if(livingEntity != null && livingEntity != observer && DisguiseManager.isDisguisedTo(livingEntity, observer)) {
+							String newSoundEffect = Sounds.replaceSoundEffect(DisguiseType.fromEntityType(livingEntity.getType()), soundEffect, DisguiseManager.getDisguise(livingEntity));
+							if(!soundEffect.equals(newSoundEffect)) {
+								if(newSoundEffect != null) {
+									Object nmsSoundEffect = soundEffectFromString(newSoundEffect);
+									if(nmsSoundEffect != null) {
+										Object customizablePacket = clonePacket(packet);
+										PacketPlayOutNamedSoundEffect_soundEffect.set(customizablePacket, nmsSoundEffect);
+										sendPacketUnaltered(observer, customizablePacket);
+										return;
+									} else {
+										return;
+									}
+								} else {
+									return;
+								}
+							}
+						}
+						sendPacketUnaltered(observer, packet);
+					} catch(Exception e) {
+						if(VersionHelper.debug()) {
+							iDisguise.getInstance().getLogger().log(Level.SEVERE, "Cannot handle packet: " + packet.getClass().getSimpleName() + " for " + observer.getName(), e);
+						}
+					}
+				});
+				return null;
+			}
+			return packet;
+		});
+		
+		localHandlers.put(PacketPlayOutScoreboardTeam, (final Player observer, final Object packet) -> {
+			if(modifyScoreboardPackets && ObjectUtil.equals(PacketPlayOutScoreboardTeam_action.getInt(packet), 0, 3, 4)) {
+				Bukkit.getScheduler().runTask(iDisguise.getInstance(), () -> {
+					try {
+						Object customizablePacket = clonePacket(packet);
+						List<String> entries = (List<String>)PacketPlayOutScoreboardTeam_entries.get(customizablePacket);
+						List<String> itemsToRemove = new ArrayList<String>();
+						List<String> itemsToAdd = new ArrayList<String>();
+						for(String entry : entries) {
+							Player player = Bukkit.getPlayer(entry);
+							if(player != null && player != observer && DisguiseManager.isDisguisedTo(player, observer) && DisguiseManager.getDisguise(player) instanceof PlayerDisguise) {
+								itemsToRemove.add(entry);
+								itemsToAdd.add(((PlayerDisguise)DisguiseManager.getDisguise(player)).getDisplayName());
+							}
+						}
+						entries.removeAll(itemsToRemove);
+						entries.addAll(itemsToAdd);
+						sendPacketUnaltered(observer, customizablePacket);
+					} catch(Exception e) {
+						if(VersionHelper.debug()) {
+							iDisguise.getInstance().getLogger().log(Level.SEVERE, "Cannot handle packet: " + packet.getClass().getSimpleName() + " for " + observer.getName(), e);
+						}
+					}
+				});
+				return null;
+			}
+			return packet;
+		});
+		
+		localHandlers.put(PacketPlayOutScoreboardScore, (final Player observer, final Object packet) -> {
+			if(modifyScoreboardPackets) {
+				Bukkit.getScheduler().runTask(iDisguise.getInstance(), () -> {
+					try {
+						Player player = Bukkit.getPlayer((String)PacketPlayOutScoreboardScore_entry.get(packet));
+						if(player != null && player != observer && DisguiseManager.isDisguisedTo(player, observer) && DisguiseManager.getDisguise(player) instanceof PlayerDisguise) {
+							Object customizablePacket = clonePacket(packet);
+							PacketPlayOutScoreboardScore_entry.set(customizablePacket, ((PlayerDisguise)DisguiseManager.getDisguise(player)).getDisplayName());
+							sendPacketUnaltered(observer, customizablePacket);
+						}
+					} catch(Exception e) {
+						if(VersionHelper.debug()) {
+							iDisguise.getInstance().getLogger().log(Level.SEVERE, "Cannot handle packet: " + packet.getClass().getSimpleName() + " for " + observer.getName(), e);
+						}
+					}
+				});
+				return null;
+			}
+			return packet;
+		});
+		
+		localHandlers.put(PacketPlayOutEntityDestroy, (final Player observer, final Object packet) -> {
+			int[] entityIds = (int[])PacketPlayOutEntityDestroy_entityIds.get(packet);
+			
+			// construct the player info packet
+			Object playerInfoPacket = PacketPlayOutPlayerInfo_new.newInstance();
+			PacketPlayOutPlayerInfo_action.set(playerInfoPacket, EnumPlayerInfoAction_REMOVE_PLAYER.get(null));
+			List playerInfoList = (List)PacketPlayOutPlayerInfo_playerInfoList.get(playerInfoPacket);
+			
+			for(int entityId : entityIds) {
+				UUID disguisable = EntityIdList.getEntityUIDByEntityId(entityId);
+				if(disguisable != null && Bukkit.getPlayer(disguisable) == null && DisguiseManager.isDisguisedTo(disguisable, observer) && DisguiseManager.getDisguise(disguisable) instanceof PlayerDisguise) {
+					playerInfoList.add(PlayerInfoData_new.newInstance(playerInfoPacket, ProfileHelper.getInstance().getGameProfile(disguisable, "", ""), 35, null, null));
+				}
+			}
+			
+			if(playerInfoList.isEmpty()) {
+				return new Object[] {packet};
+			} else {
+				return new Object[] {packet, playerInfoPacket};
+			}
+		});
+		
+		localHandlers.put(PacketPlayInUseEntity, (final Player observer, final Object packet) -> {
+			final UUID disguisable = EntityIdList.getEntityUIDByEntityId(PacketPlayInUseEntity_entityId.getInt(packet));
+			boolean attack = PacketPlayInUseEntity_getAction.invoke(packet).equals(EnumEntityUseAction_ATTACK.get(null));
+			if(!attack && disguisable != null && !observer.getUniqueId().equals(disguisable) && DisguiseManager.isDisguisedTo(disguisable, observer)) {
+				if(ObjectUtil.equals(DisguiseManager.getDisguise(disguisable).getType(), DisguiseType.SHEEP, DisguiseType.WOLF)) {
+					Bukkit.getScheduler().runTaskLater(iDisguise.getInstance(), () -> {
+						DisguiseManager.resendPackets(EntityIdList.getEntityByUID(disguisable));
+						observer.updateInventory();
+					}, 2L);
+				}
+				Bukkit.getScheduler().runTask(iDisguise.getInstance(), () -> {
+					if(Bukkit.getPlayer(disguisable) != null) Bukkit.getPluginManager().callEvent(new PlayerInteractDisguisedPlayerEvent(observer, Bukkit.getPlayer(disguisable)));
+				});
+			}
+			return packet;
+		});
+		
+		handlers = Collections.unmodifiableMap(localHandlers);
 	}
 	
-	private static Object[] handlePacketPlayOutEntityDestroy(final Player observer, final Object packet) throws Exception {
-		int[] entityIds = (int[])PacketPlayOutEntityDestroy_entityIds.get(packet);
-		
-		// construct the player info packet
-		Object playerInfoPacket = PacketPlayOutPlayerInfo_new.newInstance();
-		PacketPlayOutPlayerInfo_action.set(playerInfoPacket, EnumPlayerInfoAction_REMOVE_PLAYER.get(null));
-		List<Object> playerInfoList = (List)PacketPlayOutPlayerInfo_playerInfoList.get(playerInfoPacket);
-		
-		for(int entityId : entityIds) {
-			UUID livingEntity = EntityIdList.getEntityUIDByEntityId(entityId);
-			if(livingEntity != null && Bukkit.getPlayer(livingEntity) == null && DisguiseManager.isDisguisedTo(livingEntity, observer) && DisguiseManager.getDisguise(livingEntity) instanceof PlayerDisguise) {
-				playerInfoList.add(PlayerInfoData_new.newInstance(playerInfoPacket, ProfileHelper.getInstance().getGameProfile(livingEntity, "", ""), 35, null, null));
-			}
-		}
-		
-		if(playerInfoList.isEmpty()) {
-			return new Object[] {packet};
-		} else {
-			return new Object[] {packet, playerInfoPacket};
-		}
+	interface IPacketHandler {
+		Object handlePacket(Player observer, Object packet) throws Exception;
 	}
 	
 }
